--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -39,3 +39,9 @@
   src: url(../fonts/FUTURAPT-HEAVY.TTF);
   font-weight: 900;
 }
+
+@font-face {
+  font-family: 'Bebas Neue Cyrillic';
+  src: url(../fonts/Bebas_Neue_Cyrillic.woff);
+  font-weight: 400;
+}
