--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -666,7 +666,6 @@ body {
 
 .program .program-list {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
-  margin-bottom: 80px;
 }
 
 .program .list-item {
@@ -762,6 +761,10 @@ body {
   text-transform: uppercase;
 
   margin-bottom: 20px;
+}
+
+.price.mb-top {
+  padding-top: 80px;
 }
 
 .price span {
